# Sort-Algorithm-Viewer

./: .gitignore  CMakeLists.txt  README.md
src/: application.c  arrayViewer.c  button.c  insertionSort.c  quickSort.c
